--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
         </ul>
     </div>
-    <script src="Script.js"></script>
+
+    <!-- Corrected script filename -->
+    <script src="script.js"></script>
 </body>
 
 </html>
